bk_ida/gccida/c0/error_with_decl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/error_with_decl/src/diagnostic.c:1626:48: error: expected expression
diagnostic_for_decl( decl, msgid, ( va_list_0 *)ap, 0); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/error_with_decl/src/diagnostic.c:1626:37: error: use of undeclared identifier 'va_list_0'
diagnostic_for_decl( decl, msgid, ( va_list_0 *)ap, 0); 
                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/error_with_decl/src/obj/diagnostic.o] Error 1
